# drake_learning2

./: CMakeLists.txt  package.xml
dairlib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
dairlib/include/multibody/kinematic/: kinematic_constraints.h
dairlib/include/systems/trajectory_optimization/dircon/: dircon.h
dairlib/src/multibody/kinematic/: kinematic_constraints.cc  kinematic_evaluator.cc  world_point_evaluator.cc
dairlib/src/systems/trajectory_optimization/dircon/: dircon.cc  dircon_mode.cc  dircon_opt_constraints.cc
src/: dircon_ourbot_extension10.cc  dircon_ourbot_extension11.cc  dircon_ourbot_extension11_fixed_ankle.cc  dircon_ourbot_extension11_fixed_ankle_pitch.cc  dircon_ourbot_extension8.cc  dircon_ourbot_extension9.cc  extension8_trajectory.cc  gazebo_listener.py  gazebo_listener_v98.py  periodic_input.cc  periodic_input.h  position_input_plot.py  readme.txt  relay_show_send_input.py  relay_show_send_state.py
src/check_init/: before_solve(复件).txt  before_solve.txt
src/extensionx_trajectory/: extension11_trajectory_fixed_ankle.cc
src/priordata/: random_u_search112_fixed_ankle.txt  random_x_search112_fixed_ankle.txt
src/priordata/noflypart/: random_u_search112_fixed_ankle.txt  random_x_search112_fixed_ankle.txt  x_planed_outsearch.txt
src/priordata/withflypart/: u_planed_outsearch.txt  x_planed_outsearch.txt
src/searchdata/: gammda_c_planed_outsereach_select112_fixed.txt  lammda_c_planed_outsereach_select112_fixed.txt  lammda_planed_outsereach_select112_fixed.txt  random_u_search112_fixed_ankle.txt  random_x_search112_fixed_ankle.txt  readme.txt  u_planed_outsearch.txt
